Versão 1.0 - Componentes implementados e alguns props com maps

--- a/instagram/index.html
+++ b/instagram/index.html
@@ -167,9 +167,6 @@
                   <img src="assets/img/barked.svg" />
                   barked
                 </div>
-                <div class="acoes">
-                  <ion-icon name="ellipsis-horizontal"></ion-icon>
-                </div>
               </div>
 
               <div class="conteudo">
@@ -295,5 +292,6 @@
     </div>
 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
